[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.dependencies]
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cosmwasm-schema = "1.5"
cw-storage-plus = "1.2"
cw-utils = "1.0"
cw2 = "1.1"
cw20 = "1.1"
cw721 = "0.18"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
schemars = "0.8"
sha2 = { version = "0.10", default-features = false }
hex = "0.4"
aethelred-types = { path = "./packages/aethelred-types" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
