[package]
name = "model-registry"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
schemars = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
cosmwasm-schema = { workspace = true }
