[package]
name = "aethel-vault"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
